syntax = "proto3";

package com.ixaris.commons.netty.clustering.test;

option optimize_for = SPEED;

message ClusterTestEvent {
    int32 id = 1;
}

message ClusterTestResponse {
    int64 id = 1;
    int32 node = 2;
}

